--- a/css/styles.css
+++ b/css/styles.css
@@ -1,60 +1,48 @@
 body {
-  /*background-color: lightgrey*/
+  background-color: lightgrey
 }
 
-.renoimg {
-  padding: 1px;
-  background-color: yellow;
-
+.petimg {
+  height: 250px;
+  width: 250px;
+  margin-top: 8px;
 }
 
-img {
-  height: 35%;
-  min-height: 150px;
-  max-width: 200px;
-}
+
 .adopt {
   float: left;
   font-family: sans-serif;
   text-align: center;
-  width: 24%
+  width: 24%;
 }
 
 .pet-name{
   font-size: 28px;
   font-weight: 900;
 }
-/*.pcolumn {
-  width: 24%
-  float: left;
-  /*height: 250px;*/
-  /*width: 500px;*/
-  /*margin-right: 500px;*/
-  /*background-color: black;
-}*/
 
 .bird {
   background-color: red;
   border: black 2px solid;
-
+  height: 700px;
 }
 
 .cat {
   background-color: yellow;
   border: black 2px solid;
-
+  height: 700px;
 }
 
 .dog {
   background-color: blue;
   border: black 2px solid;
-
+  height: 700px;
 }
 
 .fish {
   background-color: green;
   border: black 2px solid;
-
+  height: 700px;
 }
 
 h1 {
@@ -62,5 +50,35 @@ h1 {
   font-weight: bold;
   font-size: 80px;
   text-align: center;
-  color: cyan;
+  color: teal;
+}
+
+h2 {
+  text-align: center;
+  font-size: 30px;
+}
+
+
+@media screen and (max-width: 4000px) and (min-width: 1700px) {
+  .bird {
+    background-color: darkred;
+    height: 600px;
+    color: white;
+  }
+
+  .cat {
+    background-color: gold;
+    height: 600px;
+  }
+
+  .dog {
+    background-color: darkblue;
+    height: 600px;
+    color: white;
+  }
+
+  .fish {
+    background-color: darkgreen;
+    height: 600px;
+  }
 }
